--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>0neN0TE</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <a href="/help">help</a>
+    <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+              <input class="checkbox" type="checkbox" name="" id="" />
+              <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+              </div>  
+            <div class="logo">
+              <h1>0neN0TE</h1>
+            </div>
+            <div class="menu-items">
+              <li><a href="/physics">PHYSICS</a></li>
+              <li><a href="/chemistry">CHEMISTRY</a></li>
+              <li><a href="/maths">MATHS</a></li>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+    
+     
 </body>
 </html>
