--- a/website/src/public/css/main.css
+++ b/website/src/public/css/main.css
@@ -1,157 +1,214 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* background-color: rgb(31, 31, 31); */
 }
 
 body {
-    background-color: black;
-  font-family: "Poppins", sans-serif;
+  background-color: rgb(0, 0, 0);
 }
 
 .container {
-  max-width: 1050px;
-  width: 90%;
-  margin: auto;
-}
-
-.navbar {
-    width: 100px;
-    height: 60px;
-    border-radius: 20px;
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
-}
-
-.nav-container {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   display: flex;
+  margin: 30px 160px 30px 160px;
   justify-content: space-between;
   align-items: center;
-  height: 62px;
+}
+@media screen and (max-width: 1024px) {
+  .container {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    display: flex;
+    margin: 30px 80px 30px 80px;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
-.navbar .menu-items {
+nav {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  color: white;
+}
+
+nav .logo {
+  font-size: 1.8rem;
+  z-index: 9;
+}
+
+nav .links {
   display: flex;
-}
-
-.navbar .nav-container li {
+  gap: 60px;
   list-style: none;
+  justify-content: center;
+  align-items: center;
 }
 
-.navbar .nav-container a {
+nav .links a {
+  color: white;
   text-decoration: none;
-  color: #ffffff;
-  font-weight: 500;
-  font-size: 1.2rem;
-  padding: 0.7rem;
-}
-
-.navbar .nav-container a:hover{
-    font-weight: bolder;
-}
-
-.nav-container {
-  display: block;
-  position: relative;
-  height: 60px;
-}
-
-.nav-container .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
   cursor: pointer;
+  font-weight: 400;
 }
 
-.nav-container .hamburger-lines {
-  display: block;
-  height: 26px;
-  width: 32px;
+nav li {
+  overflow: hidden;
+  transition: 0.5s cubic-bezier(0.97, 0.02, 0.44, 0.99);
+}
+
+.home_underline {
+  transform: translateX(-70px);
+  width: auto;
+  height: 2px;
+  background-color: white;
+  transition: 0.5s cubic-bezier(0.97, 0.02, 0.44, 0.99);
+}
+
+.list:hover > .home_underline {
+  transform: translatex(0px);
+}
+
+button {
+  border: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  color: white;
+  background-color: blueviolet;
+  border-radius: 100px;
+  padding: 10px 30px 10px 30px;
+  transform-origin: center;
+  position: relative;
+  overflow: hidden;
+}
+
+button::before {
+  content: " ";
   position: absolute;
-  top: 17px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  top: 0px;
+  width: 40px;
+  height: 40px;
+  transform: skewX(40deg) translateX(-90px);
+  background-color: rgba(255, 255, 255, 0.411);
+  z-index: 99;
+  transition: 0.8s cubic-bezier(0.97, 0.02, 0.44, 0.99);
 }
 
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #ffffff;
+button:hover::before {
+  transform: skewX(40deg) translateX(100px);
+  animation: btnshine 1s cubic-bezier(0.97, 0.02, 0.44, 0.99) infinite;
+}
+@keyframes btnshine {
+  from {
+    transform: skewX(40deg) translateX(-90px);
+  }
+  to {
+    transform: skewX(40deg) translateX(100px);
+  }
 }
 
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navbar .menu-items {
-  padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0);
-  height: 100vh;
-  width: 100%;
-  transform: translate(-150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
-}
-
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.logo {
+#nav-toggle {
   position: absolute;
-  top: 5px;
-  right: 15px;
-  font-size: 1.2rem;
-  color: #fafafa;
-}
-
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-  transform: scaleY(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-  transform: rotate(-45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .logo{
   display: none;
 }
 
+nav .icon-burger {
+  position: absolute;
+  right: 5%;
+  display: none;
+}
 
+nav .icon-burger .line {
+  width: 30px;
+  height: 4px;
+  background-color: white;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  nav .logo {
+    z-index: 99;
+  }
+  .container {
+    margin: 30px 10px 30px 30px;
+  }
+  nav .links {
+    float: none;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    right: 0;
+    bottom: 0;
+    z-index: 9;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px 0px 0px 60px;
+    background-color: rgba(0, 0, 0, 0.568);
+    backdrop-filter: blur(20px);
+    overflow: hidden;
+    transition: 0.5s cubic-bezier(0.97, 0.02, 0.44, 0.99);
+  }
+  .home_underline {
+    display: none;
+  }
+  button {
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    color: white;
+    background-color: blueviolet;
+    border-radius: 100px;
+    padding: 10px 40px 10px 40px;
+  }
+
+  nav .links a {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 3rem;
+    color: white;
+    font-weight: 600;
+  }
+  nav .icon-burger {
+    z-index: 9;
+    display: block;
+    caret-color: transparent;
+  }
+  nav :checked ~ .links {
+    left: 0;
+  }
+  nav .icon-burger .line {
+    transition: 0.3s cubic-bezier(0.97, 0.02, 0.44, 0.99);
+  }
+  nav :checked ~ .icon-burger .line:nth-child(1) {
+    transform: translateY(9px) rotate(50deg);
+  }
+  nav :checked ~ .icon-burger .line:nth-child(2) {
+    transform: translateX(10px);
+    opacity: 0;
+  }
+  nav :checked ~ .icon-burger .line:nth-child(3) {
+    transform: translateY(-9px) rotate(-50deg);
+  }
+}
+
+/* ----------header---------------- */
+
+.header {
+  display: flex;
+  flex-direction: column;
+}
+.header img {
+  width: 100%;
+}
+
+img:nth-child(2) {
+  opacity: 1;
+}
