--- a/website/src/views/index.ejs
+++ b/website/src/views/index.ejs
@@ -8,28 +8,33 @@
     <title>0neN0TE</title>
 </head>
 <body>
-    <nav>
-        <div class="navbar">
-          <div class="container nav-container">
-              <input class="checkbox" type="checkbox" name="" id="" />
-              <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-              </div>  
-            <div class="logo">
-              <h1>0neN0TE</h1>
-            </div>
-            <div class="menu-items">
-              <li><a href="/physics">PHYSICS</a></li>
-              <li><a href="/chemistry">CHEMISTRY</a></li>
-              <li><a href="/maths">MATHS</a></li>
-            </div>
-          </div>
-        </div>
-      </nav>
+  <nav class="container">
+    <input id="nav-toggle" type="checkbox" />
+    <div class="logo">Con<strong>flix</strong></div>
+    <ul class="links">
+      <li class="list">
+        <a href="">Home</a>
+        <div class="home_underline"></div>
+      </li>
+      <li class="list">
+        <a href="">Products</a>
+        <div class="home_underline"></div>
+      </li>
+      <li class="list">
+        <a href="">About</a>
+        <div class="home_underline"></div>
+      </li>
+      <button>Contact</button>
+    </ul>
+    <label for="nav-toggle" class="icon-burger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </label>
+  </nav>
+  <div class="header"></div>
 
-    
-     
+
+
 </body>
 </html>
