--- a/website/src/views/help.ejs
+++ b/website/src/views/help.ejs
@@ -7,11 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/action_page.php">
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value=""><br><br>
+    <form action="/help" method="post">
+        <label for="name">
+            First name:
+        </label>
+        <br>
+        <input type="text" id="name" name="name" value="">
+        <br>
+        <label for="email">
+            Email:
+        </label>
+        <br>
+        <input type="text" id="email" name="email" value="">
+        <br>
+        <br>
         <input type="submit" value="Submit">
       </form> 
 </body>
