--- a/website/src/views/help.ejs
+++ b/website/src/views/help.ejs
@@ -20,6 +20,11 @@
         <br>
         <input type="text" id="email" name="email" value="">
         <br>
+        <label for="email">
+            Password:
+        </label>
+        <br>
+        <input type="text" id="password" name="password" value="">
         <br>
         <input type="submit" value="Submit">
       </form> 
