--- a/website/src/views/help.ejs
+++ b/website/src/views/help.ejs
@@ -24,7 +24,7 @@
             Password:
         </label>
         <br>
-        <input type="text" id="password" name="password" value="">
+        <input type="password" id="password" name="password" value="">
         <br>
         <input type="submit" value="Submit">
       </form> 
