--- a/Ts/src/public/css/main.css
+++ b/Ts/src/public/css/main.css
@@ -68,19 +68,22 @@ section{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: #2696E9;
+  background-image: url("pic1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background: #000000; */
 }
 
-.home:before{
+/* .home:before{
   z-index: 777;
   content: '';
   position: absolute;
-  background: rgba(3, 96, 251, 0.3);
+  background: rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-}
+} */
 
 .home .content{
   z-index: 888;
@@ -155,37 +158,7 @@ section{
   object-fit: cover;
 }
 
-/* .slider-navigation{
-  z-index: 888;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: translateY(80px);
-  margin-bottom: 12px;
-}
 
-.slider-navigation .nav-btn{
-  width: 12px;
-  height: 12px;
-  background: #fff;
-  border-radius: 50%;
-  cursor: pointer;
-  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
-  transition: 0.3s ease;
-}
-
-.slider-navigation .nav-btn.active{
-  background: #2696E9;
-}
-
-.slider-navigation .nav-btn:not(:last-child){
-  margin-right: 20px;
-}
-
-.slider-navigation .nav-btn:hover{
-  transform: scale(1.2); */
-/* } */
 
 
 
