--- a/Ts/src/public/css/main.css
+++ b/Ts/src/public/css/main.css
@@ -15,7 +15,7 @@ html {
 body {
   font-family: "Public Sans", sans-serif;
   font-weight: 400;
-  color: #9698a6;
+  color: #000000;
   font-size: 0.875rem;
   line-height: 1.5;
   overflow-x: hidden;
@@ -33,10 +33,12 @@ a {
 
 h1,
 h2,
+p,
 h3 {
-  color: #2d314d;
+  color: #ffffff;
   font-weight: 500;
 }
+
 
 h2 {
   font-size: 1.875rem;
@@ -165,7 +167,7 @@ button:hover::after,
   position: relative;
   padding: 1.0625rem 0;
   z-index: 1;
-  background: white;
+  background: rgb(0, 0, 0);
 }
 
 .header nav {
@@ -186,7 +188,7 @@ button:hover::after,
     display: flex;
     flex-direction: column;
     text-align: center;
-    background: white;
+    background: rgb(0, 0, 0);
     border-radius: 0.3125rem;
     padding: 1.625rem;
     opacity: 0;
@@ -272,7 +274,7 @@ button:hover::after,
 }
 
 .hero {
-  background: #fafafa;
+  background: #000000;
 }
 
 @media (max-width: 63.9375em) {
@@ -290,7 +292,7 @@ button:hover::after,
 
 .hero .hero-image {
   position: relative;
-  background: url(https://raw.githubusercontent.com/MohamedAridah/frontendmentor_easybank-landing-page/main/images/bg-intro-mobile.svg)
+  background: url(pic1.jpg)
     no-repeat center/cover;
   min-height: 17.5rem;
 }
@@ -314,35 +316,17 @@ button:hover::after,
     position: absolute;
     height: 100%;
     width: 150%;
-    background: url(https://raw.githubusercontent.com/MohamedAridah/frontendmentor_easybank-landing-page/main/images/bg-intro-desktop.svg)
+    background: url(pic1.jpg)
       no-repeat -5% 83%/122%;
   }
 }
 
-.hero .hero-image::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: url(https://raw.githubusercontent.com/MohamedAridah/frontendmentor_easybank-landing-page/main/images/image-mockups.png)
-    no-repeat center bottom/93%;
-}
 
-@media (min-width: 40em) {
-  .hero .hero-image::after {
-    background-size: 53%;
-  }
-}
 
-@media (min-width: 64em) {
-  .hero .hero-image::after {
-    width: 119%;
-    height: 122%;
-    background-size: 94%;
-    background-position: center 150%;
-    left: 19%;
-  }
-}
+
+
+
+
 
 .hero .hero-text {
   text-align: center;
@@ -380,7 +364,7 @@ button:hover::after,
 }
 
 .features {
-  background: #f3f4f6;
+  background: #000000;
   padding: 6.25rem 0;
 }
 
@@ -435,7 +419,7 @@ button:hover::after,
 }
 
 .articles {
-  background: #fafafa;
+  background: #000000;
   padding: 6.25rem 0;
 }
 
@@ -458,7 +442,7 @@ button:hover::after,
 }
 
 .articles .article {
-  background: #fff;
+  background: rgb(0, 0, 0);
   border-radius: 0.3125rem;
   box-shadow: 0 0.1875rem 0.75rem rgba(0, 0, 0, 0.15);
   transition: transform 0.2s ease-in-out;
@@ -515,8 +499,8 @@ button:hover::after,
 }
 
 .footer {
-  background: #2d314d;
-  color: white;
+  background: #000000;
+  color: rgb(255, 255, 255);
   padding: 2.5rem;
   padding-bottom: 0;
   text-align: center;
