--- a/src/views/secret.ejs
+++ b/src/views/secret.ejs
@@ -6,6 +6,6 @@ x0VyGGNt0hWc3loNeD7GIL4nbbo&usqp=CAU">
  
 <h1>This is home page</h1>
  
-<li><a href="/register">Sign up!!</a></li>
-<li><a href="/login">Login</a></li>
+<!-- <li><a href="/register">Sign up!!</a></li>
+<li><a href="/login">Login</a></li> -->
 <li><a href="/logout">Logout</a></li>
