--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -12,4 +12,4 @@
  
 <li><a href="/register">Sign up!!</a></li>
 <li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+<!-- <li><a href="/logout">Logout</a></li> -->
