--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,8 +1,8 @@
 <h1>login</h1>
  
 <form action="/login" method="POST">
-    <input type="text" name="username"
-        placeholder="username">
+    <input type="email" name="email"
+        placeholder="email">
     <input type="password" name="password"
         placeholder="password">
     <button>login</button>
