--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -3,6 +3,8 @@
 <form action="/register" method="POST">
     <input type="text" name="username"
         placeholder="username">
+    <input type="email" name="email"
+        placeholder="email">
     <input type="password" name="password"
         placeholder="password">
     <button>Submit</button>
