--- a/ref/views/login.ejs
+++ b/ref/views/login.ejs
@@ -1,8 +1,6 @@
 <h1>login</h1>
  
 <form action="/login" method="POST">
-    <!-- <input type="email" name="email"
-        placeholder="email"> -->
     <input type="text" name="username"
         placeholder="username">
     <input type="password" name="password"
@@ -14,4 +12,4 @@
  
 <li><a href="/register">Sign up!!</a></li>
 <li><a href="/login">Login</a></li>
-<!-- <li><a href="/logout">Logout</a></li> -->
+<li><a href="/logout">Logout</a></li>
